--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <h1> Hello World!!</h1>
     <a href="/member/save">회원가입</a>
     <a href="/member/login">로그인</a>
+    <a href="/member/">회원목록</a>
 
 </body>
 </html>
