--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <a href="/member/save">회원가입</a>
     <a href="/member/login">로그인</a>
     <a href="/member/">회원목록</a>
+    <a href="/video/">비디오</a>
 
 </body>
 </html>
