--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,8 @@
     <a href="/member/login">로그인</a>
     <a href="/member/">회원목록</a>
     <a href="/video/">비디오</a>
+    <a href="test/test">ajax 호출</a>
+    <a href="/board/">게시판</a>
 
 </body>
 </html>
