--- a/src/main/resources/templates/boarddetail.html
+++ b/src/main/resources/templates/boarddetail.html
@@ -5,7 +5,7 @@
     <title>세부정보</title>
 </head>
 <body>
-<table>
+<table border="1">
     <tr>
         <th>title</th>
         <th>content</th>
@@ -14,7 +14,6 @@
         <td th:text="${board.title}"></td>
         <td th:text="${board.content}"></td>
     </tr>
-
 </table>
 
 </body>
