게시글 조회수 추가

--- a/src/main/resources/templates/boardlist.html
+++ b/src/main/resources/templates/boardlist.html
@@ -14,10 +14,12 @@
     <tr th:each="board: ${boardList}">
         <td>
             <a th:href="@{|/board/${board.id}|}" th:text="${board.title}">조회</a>
-
         </td>
         <td>
             <a th:href="@{|/board/delete/${board.id}|}">X</a>
+        </td>
+        <td>
+            <a th:text="${board.view}"></a>
         </td>
     </tr>
 </table>
