--- a/src/main/resources/templates/save.html
+++ b/src/main/resources/templates/save.html
@@ -5,13 +5,13 @@
     <title>Save</title>
 </head>
 <body>
-<form action="/member/save" method="post">
+<form id="memberForm" action="/member/save" method="post">
   이메일: <input type="text" name="memberEmail"> <br>
   비밀번호: <input type="password" name="memberPassword"> <br>
   이름 : <input type="text" name="memberName"> <br>
   <input type="submit" value="회원가입">
-
 </form>
+<script type="text/javascript" src="/save.js"></script>
 
 </body>
 </html>
