--- a/src/main/resources/templates/boarddetail.html
+++ b/src/main/resources/templates/boarddetail.html
@@ -10,11 +10,13 @@
         <th>제목</th>
         <th>내용</th>
         <th>이미지</th>
+        <th>수정하기</th>
     </tr>
     <tr>
         <td th:text="${board.title}"></td>
         <td th:text="${board.content}"></td>
         <td><img th:if="${board.imageUrl}" th:src="${board.imageUrl}" alt="image"></td>
+        <td><a th:href="@{|/board/edit/${board.id}|}">수정하기</a></td>
     </tr>
 
 </table>
